# simple_mpc_server

./: pyproject.toml
src/simple_mpc_server/: example.py  example_thinker.py  main.py
src/simple_mpc_server/core/: Atool.py  arduino_board.py  tool_response.py
src/simple_mpc_server/gesture_tracker/: analysis.py  camera.py  demo.py  detector.py  drawing.py  models.py  old_main.py
src/simple_mpc_server/tools/: arduino_tool.py  camera_tool.py  file_system_tool.py  monster_tool.py  robot_tool.py  thinker_tool.py
