[project]
name = "simple-mpc-server"
version = "0.1.0"
description = ""
authors = [
    {name = "mikoslaf",email = "mikolaj2003wojcik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mcp[cli] (>=1.25.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyserial (>=3.5,<4.0)",
]

[tool.poetry]
packages = [{include = "simple_mpc_server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
